# sat-city

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  requirements.in  requirements.txt  sat-city-conda-env.yml  sat-cty-conda-env.yml  setup.cfg
sat_city/src/sat_city/: utils.py
sat_cty/: bily_trial.py  city_summary.py  utils.py
sat_cty/data/: my_itemcollection.json
sat_cty/src/: city_summary.py
src/sat_city/: sat_city.py  utils.py
tests/: test_utils.py
