[metadata]
name = sat-city
version = attr: sat-city.__version__
author = Arthur Elmes
author_email = arthur.elmes@gmail.com
# url = https://godatadriven.com/blog/a-practical-guide-to-setuptools-and-pyproject-toml
description = Use satellite imagery to statistically describe a city-sized area
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT
classifiers = [
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
]

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pystac-client
    odc-stac
    cirrus-lib
    pyproj

[options.entry_points]
# TODO we probably want to implement a CLI at somet point
# console_scripts =
#     my-example-utility = example.example_module:main

[options.extras_require]
dev =
    black
    isort
    pre-commit

[options.package_data]
example = data/my_itemcollection.json, *.txt
* = README.md
